Remove CHECKs from UdevLinux

We CHECK that udev intiailization succeeds, but this is not guaranteed.
A misconfigured system can thus effectively make Chrome unusable.

Instead, log an error but allow the browser to operate normally
otherwise.

Bug: 782258
Change-Id: I217412e841d6622f3166542c1d6dc33d89d0f95d
Reviewed-on: https://chromium-review.googlesource.com/764116
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515682}
Former-commit-id: fb9262d6d88054c12bbb3dc7239869a86a31686c